# 3DGSRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh  run.sh
docs/: Primitives_README.md
examples/: primitives_example.cpp
res/shaders/: basepass.fs.glsl  basepass.vs.glsl  bloom_blur.fs.glsl  bloom_composite.fs.glsl  bloom_threshold.fs.glsl  cube.fs.glsl  cube.vs.glsl  emissive.fs.glsl  final.fs.glsl  final.vs.glsl  forward_effect.fs.glsl  forward_effect.vs.glsl  gaussian.fs.glsl  gaussian.vs.glsl  gaussian_splat.fs.glsl  gaussian_splat.vs.glsl  lambert.fs.glsl  lambert.vs.glsl  lidar_depth.fs.glsl  lidar_depth.vs.glsl  lidar_vis.fs.glsl  lidar_vis.vs.glsl  outline.fs.glsl  pbr.fs.glsl  pbr.vs.glsl  point.fs.glsl  point.vs.glsl  postprocess.fs.glsl  shaderutils.glsl  shadow.vs.glsl  ssao.fs.glsl  ssao_blur.fs.glsl
scripts/: simplify_ply.py
src/: main.cpp
src/App/: AppDemo.cpp  AppDemo.h
src/Engine/: Application.cpp  Application.h  CMakeLists.txt  Core.h
src/Engine/Assets/: MaterialManager.cpp  MaterialManager.h  TextureManager.cpp  TextureManager.h
src/Engine/Event/: Event.h  EventBus.cpp  EventBus.h
src/Engine/Gui/: GuiLayer.cpp  GuiLayer.h
src/Engine/ModelLoader/: AssimpModelLoader.cpp  AssimpModelLoader.h
src/Engine/Scene/: Scene.cpp  Scene.h
src/Engine/Window/: Window.cpp  Window.h
src/GaussianRenderer/: CMakeLists.txt  GaussianRenderer.cpp  GaussianRenderer.h  GaussianRendererCore.h  TypeDef.h
src/Logger/: CMakeLists.txt  Log.cpp  Log.h
src/Renderer/: AssimpModelLoader.cpp  AssimpModelLoader.h  CMakeLists.txt  Camera.cpp  Camera.h  FinalPass.cpp  FinalPass.h  ForwardPass.cpp  ForwardPass.h  FrameBuffer.cpp  FrameBuffer.h  GeometryPass.cpp  GeometryPass.h  IRenderPass.h  LidarSensor.cpp  LidarSensor.h  Light.h  LightingPass.cpp  LightingPass.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PostProcessChain.cpp  PostProcessChain.h  PostProcessEffect.h  PostProcessPass.cpp  PostProcessPass.h  RenderContext.h  RenderPipeline.cpp  RenderPipeline.h  Renderable.cpp  Renderable.h  RendererContext.cpp  RendererContext.h  SSAOBlurPass.cpp  (+19 more)
src/Renderer/Core/: BaseDef.h  RenderCore.h  TypeDef.h
src/Renderer/CudaUtils/: sort.cu
src/Renderer/Effects/: BloomEffect.cpp  BloomEffect.h  OutlineEffect.cpp  OutlineEffect.h
src/Renderer/Event/: Event.h  EventBus.cpp  EventBus.h
src/Renderer/GaussianSplatting/: GaussianRenderer.cpp  GaussianRenderer.h  PlyLoader.cpp  PlyLoader.h  TypeDef.h
src/Renderer/GaussianSplatting/tinyply/: tinyply.h
src/Renderer/Gui/: GuiLayer.cpp  GuiLayer.h
src/Renderer/MathUtils/: Covariance.h  GaussianFuncUtils.h  Matrix.cpp  Matrix.h  Quaternion.h  Random.cpp  Random.h  Vector.cpp  Vector.h
src/Renderer/Primitives/: CubePrimitive.cpp  CubePrimitive.h  MeshPrimitive.cpp  MeshPrimitive.h  Primitive.cpp  Primitive.h  QuadPrimitive.cpp  QuadPrimitive.h  SpherePrimitive.cpp  SpherePrimitive.h
src/Renderer/RenderHelper/: RenderHelper.cpp  RenderHelper.h
src/Renderer/ThreadPool/: ThreadPool.cpp  ThreadPool.h
